Fix input/output board overflowing in very small screens

--- a/style/style.css
+++ b/style/style.css
@@ -48,12 +48,17 @@ header > h1 {
 }
 
 .board-container {
-    flex: 1;
+    flex: 1 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 0;
+}
+
+.board-container > canvas {
+    min-width: 0;
+    flex: 1 1;
 }
 
 #arrowParent {
